Changed time to the start of line in starship
Signed-off-by: George Araujo <george.gcac@gmail.com>

--- a/starship.toml
+++ b/starship.toml
@@ -1,6 +1,9 @@
 # Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
+# Move the time to the beginning of the 1st line
+format = "$time$all"
+
 # Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
