Changed display of gnu screen info on starship
Signed-off-by: George Araujo <george.gcac@gmail.com>

--- a/starship.toml
+++ b/starship.toml
@@ -15,6 +15,7 @@ format = '🕙 [$time]($style) '
 # Add gnu screen session name
 [custom.gnu_screen]
 command = "echo ${STY#[0-9]*.}" # shows output of command
-format = "[\\[$symbol $output\\]]($style) "
-symbol = ""
-when = """ test -n "$STY" """
+description = "Display a monitor glyph and the session name if we're in a gnu screen session."
+format = "[$symbol $output]($style) "
+symbol = "🖵 "
+when = """ test "$STY" """
